# clickhouse-testing

./: .env  Cargo.toml  LICENCE  Makefile  README.md  docker-compose.yaml
.migrations/: 001-create_table.sql
core/: Cargo.toml
core/src/: lib.rs
core/tests/: example.rs
macros/: Cargo.toml
macros/src/: lib.rs
