[package]
name = "clickhouse-testing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
categories = { workspace = true }

[dependencies]
dotenvy = { workspace = true }
clickhouse = { workspace = true }
clickhouse-testing-macros = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
clickhouse-testing = { path = "." }
tokio = { workspace = true }