[package]
name = "clickhouse-testing-macros"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }